# fastapi-starter

./: .env.example  .gitignore  FINAL_NEW_ARCHITECTURE.md  NEW_ARCHITECTURE.md  NEW_README.md  README.md  RESILIENCY.md  alembic.ini  cli.py  kafka-consumers.md  pyproject.toml  reset_db.sh  run_consumer.sh
app/: config.py  mail.py  main.py  metrics.py  utils.py
app/admin/: README.md  __init__.py  auth.py  formatters.py
app/admin/views/: __init__.py  access_token_admin.py  base.py  user_admin.py
app/auth/: __init__.py  dependencies.py  factories.py  require_user.py  user_manager.py
app/cli/: README.md  __init__.py  click.py  events.py  groups.py  kafka.py  main.py  users.py
app/db/: __init__.py
app/db/managers/: __init__.py  base.py  user_model_manager.py
app/db/models/: __init__.py  access_token.py  base.py  event_outbox.py  kafka_message.py  kafka_offset.py  processed_event.py  user.py
app/events/: README.md  __init__.py  base.py  broker.py  celery.py  outbox.py  registry.py  relay.py  testing.py  worker.py
app/events/handlers/: __init__.py
app/hello/: __init__.py
app/kafka/: README.md  __init__.py  config.py  consumer.py  events.py  handlers.py  registry.py  schema.py
app/schema/: user.py
app/templates/email/: layout.html  user-forgot-password.html  user-password-changed.html  user-registered.html  user-request-verify.html
app/templates/sqladmin/: index.html
app/views/: __init__.py  health.py  kafka.py  metrics.py
app/ws/: README.md  __init__.py  auth.py  endpoint.py  events.py  handlers.py  heartbeat.py  manager.py  messages.py
benchmarks/: README.md  __main__.py  run.py  stats.py
migrations/: cli.py  env.py  script.py.mako
migrations/versions/: 0ec60bc5c0c2_add_event_outbox_and_processed_event_tables.py  1da5d7f0aa92_add_kafka_offset_and_kafka_message_tables.py  bd1e56f14382_create_user_and_access_token.py
tests/: client.py  conftest.py  test_app.py
tests/kafka/: conftest.py  test_consumers.py
tests/test_admin/: conftest.py  test_access_tokens.py  test_auth.py  test_users.py
tests/test_auth/: conftest.py  test_login.py  test_password.py  test_register.py  test_user.py  test_verify.py
tests/test_cli/: conftest.py  test_events.py  test_main.py  test_users.py
tests/test_events/: conftest.py  test_celery.py  test_event_models.py  test_handlers.py  test_integration.py  test_outbox.py  test_registry.py  test_relay.py
tests/test_hello/: test_hello.py
tests/test_kafka/: conftest.py  test_consumers.py  test_kafka_events.py
tests/test_ws/: test_ws.py
